fix: alignment of stars and views icons and description

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -86,7 +86,7 @@
   margin-top: 5px;
   padding-right: 8px;
   text-align: right;
-  justify-content: right;
+  justify-content: flex-end;
 }
 
 .icons-div {
